lib/src/xxhash_bindings.g.dart


  late final _XXH3_copyStatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XXH3_state_t>,
              ffi.Pointer<XXH3_state_t>)>>('XXH3_copyState');
  late final _XXH3_copyState = _XXH3_copyStatePtr.asFunction<
      void Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<XXH3_state_t>)>();

  /// !
  /// @brief Resets an @ref XXH3_state_t to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note
  /// - This function resets `statePtr` and generate a secret with default parameters.
  /// - Call this function before @ref XXH3_64bits_update().
  /// - Digest will be equivalent to `XXH3_64bits()`.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_64bits_reset(
    ffi.Pointer<XXH3_state_t> statePtr,
  ) {
    return _XXH3_64bits_reset(
      statePtr,
    );
  }

  late final _XXH3_64bits_resetPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<XXH3_state_t>)>>(
      'XXH3_64bits_reset');
  late final _XXH3_64bits_reset = _XXH3_64bits_resetPtr.asFunction<
      int Function(ffi.Pointer<XXH3_state_t>)>();

  /// !
  /// @brief Resets an @ref XXH3_state_t with 64-bit seed to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  /// @param seed     The 64-bit seed to alter the hash result predictably.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note
  /// - This function resets `statePtr` and generate a secret from `seed`.
  /// - Call this function before @ref XXH3_64bits_update().
  /// - Digest will be equivalent to `XXH3_64bits_withSeed()`.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_64bits_reset_withSeed(
    ffi.Pointer<XXH3_state_t> statePtr,
    int seed,
  ) {
    return _XXH3_64bits_reset_withSeed(
      statePtr,
      seed,
    );
  }

  late final _XXH3_64bits_reset_withSeedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH3_state_t>,
              XXH64_hash_t)>>('XXH3_64bits_reset_withSeed');
  late final _XXH3_64bits_reset_withSeed = _XXH3_64bits_reset_withSeedPtr
      .asFunction<int Function(ffi.Pointer<XXH3_state_t>, int)>();

  /// !
  /// @brief Resets an @ref XXH3_state_t with secret data to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  /// @param secret     The secret data.
  /// @param secretSize The length of @p secret, in bytes.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note
  /// `secret` is referenced, it _must outlive_ the hash streaming session.
  ///
  /// Similar to one-shot API, `secretSize` must be >= @ref XXH3_SECRET_SIZE_MIN,
  /// and the quality of produced hash values depends on secret's entropy
  /// (secret's content should look like a bunch of random bytes).
  /// When in doubt about the randomness of a candidate `secret`,
  /// consider employing `XXH3_generateSecret()` instead (see below).
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_64bits_reset_withSecret(
    ffi.Pointer<XXH3_state_t> statePtr,
    ffi.Pointer<ffi.Void> secret,
    int secretSize,
  ) {
    return _XXH3_64bits_reset_withSecret(
      statePtr,
      secret,
      secretSize,
    );
  }

  late final _XXH3_64bits_reset_withSecretPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('XXH3_64bits_reset_withSecret');
  late final _XXH3_64bits_reset_withSecret =
      _XXH3_64bits_reset_withSecretPtr.asFunction<
          int Function(
              ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Consumes a block of @p input to an @ref XXH3_state_t.
  ///
  /// @param statePtr The state struct to update.
  /// @param input The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note Call this to incrementally consume blocks of data.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_64bits_update(
    ffi.Pointer<XXH3_state_t> statePtr,
    ffi.Pointer<ffi.Void> input,
    int length,
  ) {
    return _XXH3_64bits_update(
      statePtr,
      input,
      length,
    );
  }

  late final _XXH3_64bits_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('XXH3_64bits_update');
  late final _XXH3_64bits_update = _XXH3_64bits_updatePtr.asFunction<
      int Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Returns the calculated XXH3 64-bit hash value from an @ref XXH3_state_t.
  ///
  /// @param statePtr The state struct to calculate the hash from.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return The calculated XXH3 64-bit hash value from that state.
  ///
  /// @note
  /// Calling XXH3_64bits_digest() will not affect @p statePtr, so you can update,
  /// digest, and update again.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_64bits_digest(
    ffi.Pointer<XXH3_state_t> statePtr,
  ) {
    return _XXH3_64bits_digest(
      statePtr,
    );
  }

  late final _XXH3_64bits_digestPtr = _lookup<
          ffi.NativeFunction<XXH64_hash_t Function(ffi.Pointer<XXH3_state_t>)>>(
      'XXH3_64bits_digest');
  late final _XXH3_64bits_digest = _XXH3_64bits_digestPtr.asFunction<
      int Function(ffi.Pointer<XXH3_state_t>)>();

  /// !
  /// @brief Calculates 128-bit unseeded variant of XXH3 of @p data.
  ///
  /// @param data The block of data to be hashed, at least @p length bytes in size.
  /// @param len  The length of @p data, in bytes.
  ///
  /// @return The calculated 128-bit variant of XXH3 value.
  ///
  /// The 128-bit variant of XXH3 has more strength, but it has a bit of overhead
  /// for shorter inputs.
  ///
  /// This is equivalent to @ref XXH3_128bits_withSeed() with a seed of `0`, however
  /// it may have slightly better performance due to constant propagation of the
  /// defaults.
  ///
  /// @see XXH3_128bits_withSeed(), XXH3_128bits_withSecret(): other seeding variants
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  XXH128_hash_t XXH3_128bits(
    ffi.Pointer<ffi.Void> data,
    int len,
  ) {
    return _XXH3_128bits(
      data,
      len,
    );
  }

  late final _XXH3_128bitsPtr = _lookup<
      ffi.NativeFunction<
          XXH128_hash_t Function(
              ffi.Pointer<ffi.Void>, ffi.Size)>>('XXH3_128bits');
  late final _XXH3_128bits = _XXH3_128bitsPtr.asFunction<
      XXH128_hash_t Function(ffi.Pointer<ffi.Void>, int)>();

  /// ! @brief Calculates 128-bit seeded variant of XXH3 hash of @p data.
  ///
  /// @param data The block of data to be hashed, at least @p length bytes in size.
  /// @param len  The length of @p data, in bytes.
  /// @param seed The 64-bit seed to alter the hash result predictably.
  ///
  /// @return The calculated 128-bit variant of XXH3 value.
  ///
  /// @note
  /// seed == 0 produces the same results as @ref XXH3_64bits().
  ///
  /// This variant generates a custom secret on the fly based on default secret
  /// altered using the @p seed value.
  ///
  /// While this operation is decently fast, note that it's not completely free.
  ///
  /// @see XXH3_128bits(), XXH3_128bits_withSecret(): other seeding variants
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  XXH128_hash_t XXH3_128bits_withSeed(
    ffi.Pointer<ffi.Void> data,
    int len,
    int seed,
  ) {
    return _XXH3_128bits_withSeed(
      data,
      len,
      seed,
    );
  }

  late final _XXH3_128bits_withSeedPtr = _lookup<
      ffi.NativeFunction<
          XXH128_hash_t Function(ffi.Pointer<ffi.Void>, ffi.Size,
              XXH64_hash_t)>>('XXH3_128bits_withSeed');
  late final _XXH3_128bits_withSeed = _XXH3_128bits_withSeedPtr.asFunction<
      XXH128_hash_t Function(ffi.Pointer<ffi.Void>, int, int)>();

  /// !
  /// @brief Calculates 128-bit variant of XXH3 with a custom "secret".
  ///
  /// @param data       The block of data to be hashed, at least @p len bytes in size.
  /// @param len        The length of @p data, in bytes.
  /// @param secret     The secret data.
  /// @param secretSize The length of @p secret, in bytes.
  ///
  /// @return The calculated 128-bit variant of XXH3 value.
  ///
  /// It's possible to provide any blob of bytes as a "secret" to generate the hash.
  /// This makes it more difficult for an external actor to prepare an intentional collision.
  /// The main condition is that @p secretSize *must* be large enough (>= @ref XXH3_SECRET_SIZE_MIN).
  /// However, the quality of the secret impacts the dispersion of the hash algorithm.
  /// Therefore, the secret _must_ look like a bunch of random bytes.
  /// Avoid "trivial" or structured data such as repeated sequences or a text document.
  /// Whenever in doubt about the "randomness" of the blob of bytes,
  /// consider employing @ref XXH3_generateSecret() instead (see below).
  /// It will generate a proper high entropy secret derived from the blob of bytes.
  /// Another advantage of using XXH3_generateSecret() is that
  /// it guarantees that all bits within the initial blob of bytes
  /// will impact every bit of the output.
  /// This is not necessarily the case when using the blob of bytes directly
  /// because, when hashing _small_ inputs, only a portion of the secret is employed.
  ///
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  XXH128_hash_t XXH3_128bits_withSecret(
    ffi.Pointer<ffi.Void> data,
    int len,
    ffi.Pointer<ffi.Void> secret,
    int secretSize,
  ) {
    return _XXH3_128bits_withSecret(
      data,
      len,
      secret,
      secretSize,
    );
  }

  late final _XXH3_128bits_withSecretPtr = _lookup<
      ffi.NativeFunction<
          XXH128_hash_t Function(ffi.Pointer<ffi.Void>, ffi.Size,
              ffi.Pointer<ffi.Void>, ffi.Size)>>('XXH3_128bits_withSecret');
  late final _XXH3_128bits_withSecret = _XXH3_128bits_withSecretPtr.asFunction<
      XXH128_hash_t Function(
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Resets an @ref XXH3_state_t to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note
  /// - This function resets `statePtr` and generate a secret with default parameters.
  /// - Call it before @ref XXH3_128bits_update().
  /// - Digest will be equivalent to `XXH3_128bits()`.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_128bits_reset(
    ffi.Pointer<XXH3_state_t> statePtr,
  ) {
    return _XXH3_128bits_reset(
      statePtr,
    );
  }

  late final _XXH3_128bits_resetPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<XXH3_state_t>)>>(
      'XXH3_128bits_reset');
  late final _XXH3_128bits_reset = _XXH3_128bits_resetPtr.asFunction<
      int Function(ffi.Pointer<XXH3_state_t>)>();
